test/tooltest/effectgen/invalid/07_invalid_field_name.params
/*
 * Invalid: Field with no name (just type)
 */

struct [[ge::params(type=TEST_NO_FIELD_NAME, name="TestNoFieldName")]] TestNoFieldNameParams {
    float;
    int value2;
};
